<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290dp"
    android:layout_height="430dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    android:background="#27246B"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <FrameLayout
            android:layout_width="114dp"
            android:layout_height="71dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="1dp"
                android:background="@drawable/logo">
            </ImageView>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="1dp"
                android:background="@drawable/logo2">
            </ImageView>
        </FrameLayout>

        <TextView
            android:id="@+id/instruction"
            android:layout_width="79dp"
            android:layout_height="18dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/instruction"
            android:textAppearance="@style/instruction"
            android:layout_marginBottom="2dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#ffffff"
            >

        </View>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="267dp"
        android:orientation="vertical"
        android:paddingRight="15dp"
        android:paddingLeft="15dp">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="16.5dp"
                android:src="@drawable/land">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="-40dp"
                android:text="@string/landscape"
                android:textAppearance="@style/landscape"
                />

            <TextView
                android:layout_width="161dp"
                android:layout_height="32dp"
                android:layout_marginLeft="40dp"
                android:gravity="top"
                android:lineSpacingExtra="0sp"
                android:text="@string/upload_imag"
                android:textAppearance="@style/image_must_" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="16.5dp"
                android:src="@drawable/sky">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="-40dp"
                android:text="@string/sky_reigon"
                android:textAppearance="@style/landscape"
                />

            <TextView
                android:layout_width="161dp"
                android:layout_height="32dp"
                android:layout_marginLeft="40dp"
                android:gravity="top"
                android:lineSpacingExtra="0sp"
                android:text="@string/image_must_"
                android:textAppearance="@style/image_must_" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="16.5dp"
                android:src="@drawable/light">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="-40dp"
                android:text="@string/direct_ligh"
                android:textAppearance="@style/landscape"
                />

            <TextView
                android:layout_width="161dp"
                android:layout_height="32dp"
                android:layout_marginLeft="40dp"
                android:gravity="top"
                android:lineSpacingExtra="0sp"
                android:text="@string/image_dw"
                android:textAppearance="@style/image_must_" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="16.5dp"
                android:src="@drawable/c3">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="-40dp"
                android:text="@string/upload"
                android:textAppearance="@style/landscape"
                />

            <TextView
                android:layout_width="161dp"
                android:layout_height="32dp"
                android:layout_marginLeft="40dp"
                android:gravity="top"
                android:lineSpacingExtra="0sp"
                android:text="@string/upload_image"
                android:textAppearance="@style/image_must_" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="90dp"
        android:layout_height="34dp"
        android:background="#4DB748"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:text="Okay"
        android:textColor="#FFFFFF">
    </Button>

</LinearLayout>
